[gd_scene load_steps=16 format=2]

[ext_resource path="res://Inimigos/Aprendiz_feiticeiro/Aprendiz_feiticeiro.png" type="Texture" id=1]
[ext_resource path="res://Inimigos/Inimigo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Inimigos/Aprendiz_feiticeiro/AprendizFeiticeiro.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 56, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "ataque",
"speed": 5.0
} ]

[node name="AprendizFeiticeiro" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 12 )

[node name="AtaqueTimer" type="Timer" parent="." index="3"]
wait_time = 3.0
autostart = true

[node name="ChaoRayCast2D" type="RayCast2D" parent="." index="4"]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 5120

[node name="DirecaoRayCast2D" type="RayCast2D" parent="." index="5"]
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 5120

[connection signal="timeout" from="AtaqueTimer" to="." method="_on_AtaqueTimer_timeout"]
